force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Active_Version__c.field-meta.xml
<CustomField>
    <fullName>refedge__Active_Version__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This checkbox denotes that this version of the settings is the active one</description>
    <inlineHelpText>This checkbox denotes that this version of Custom Settings is currently active.</inlineHelpText>
    <label>Active Version</label>
    <type>Checkbox</type>
</CustomField>