force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Adv_Routing_Default__c.field-meta.xml
<CustomField>
    <fullName>refedge__Adv_Routing_Default__c</fullName>
    <description>The default behaviour if Advanced Routing does not find a match.</description>
    <inlineHelpText>The default behaviour if Advanced Routing does not find a match.</inlineHelpText>
    <label>Advanced Routing Default</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send to CRP Team</fullName>
                <default>true</default>
                <label>Send to CRP Team</label>
            </value>
            <value>
                <fullName>Send to Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>