force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Adv_Routing_Group_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>refedge__Adv_Routing_Group_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a selection must be made from the Advanced Routing Group before a request can be submitted.</description>
    <inlineHelpText>Indicates that a selection must be made from the Advanced Routing Group before a request can be submitted.</inlineHelpText>
    <label>Advanced Routing Group Mandatory</label>
    <type>Checkbox</type>
</CustomField>