force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Adv_Rt_Acct_Team_Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Adv_Rt_Acct_Team_Contact__c</fullName>
    <label>Contact Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>