force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Adv_Rt_Acct_Team_Role_Picklist__c.field-meta.xml
<CustomField>
    <fullName>refedge__Adv_Rt_Acct_Team_Role_Picklist__c</fullName>
    <label>Role Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>