force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Apply_Opportunity_Stage_Filter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Apply_Opportunity_Stage_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Opportunity Stage Filter</label>
    <type>Checkbox</type>
</CustomField>