force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Approve_Decline_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Approve_Decline_Confirmation_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent by the Reference Owner to the Requester.</inlineHelpText>
    <label>Approve/Decline Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>