force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Approve_Decline_Confirmation_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Approve_Decline_Confirmation_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent by the Reference Owner to the Requester.</description>
    <inlineHelpText>Enables the slack message sent by the Reference Owner to the Requester.</inlineHelpText>
    <label>Approve/Decline Confirmation Slack</label>
    <type>Checkbox</type>
</CustomField>