force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Attach_Supporting_Documents_To_Requests__c.field-meta.xml
<CustomField>
    <fullName>refedge__Attach_Supporting_Documents_To_Requests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attach Supporting Documents To Requests</label>
    <type>Checkbox</type>
</CustomField>