force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Automatically_Assign_Reward_on_Feedback__c.field-meta.xml
<CustomField>
    <fullName>refedge__Automatically_Assign_Reward_on_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Issue Customer Points on Feedback</label>
    <type>Checkbox</type>
</CustomField>