force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Check_back_in_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Check_back_in_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the confirmation Chatter sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</description>
    <inlineHelpText>Enables the confirmation Chatter sent to the Opportunity owner when they select a timeframe for checking back in on referenceability of an Account / Contact.</inlineHelpText>
    <label>Check back in Chatter</label>
    <type>Checkbox</type>
</CustomField>