force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Consider_No_longer_needed_a_use__c.field-meta.xml
<CustomField>
    <fullName>refedge__Consider_No_longer_needed_a_use__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Consider “No longer needed” a use?</label>
    <type>Checkbox</type>
</CustomField>