force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Contact_Invitation_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact_Invitation_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Invitation Email</label>
    <type>Checkbox</type>
</CustomField>