force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Contact_Thanks_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact_Thanks_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Thanks Chatter</label>
    <type>Checkbox</type>
</CustomField>