force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Create_Advocate_Reference_Profile__c.field-meta.xml
<CustomField>
    <fullName>refedge__Create_Advocate_Reference_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When unchecked a new Hub Advocate will create a Nomination. When checked a new Hub Advocate will create a Reference Profile.</inlineHelpText>
    <label>Create Advocate Reference Profile</label>
    <type>Checkbox</type>
</CustomField>