force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Create_Reference_Profile__c.field-meta.xml
<CustomField>
    <fullName>refedge__Create_Reference_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When a Reference Lead results in a Reference being provided a Reference Profile is created</description>
    <inlineHelpText>When a Reference Lead results in a Reference being provided a Reference Profile is created</inlineHelpText>
    <label>Create Reference Profile?</label>
    <type>Checkbox</type>
</CustomField>