force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__DC_Escalation_to_Owner_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__DC_Escalation_to_Owner_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DC Escalation to Owner Chatter</label>
    <type>Checkbox</type>
</CustomField>