force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__DC_Initial_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__DC_Initial_Notification_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DC Initial Notification Email</label>
    <type>Checkbox</type>
</CustomField>