force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__DC_Manager_Review_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__DC_Manager_Review_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <label>DC Manager Review Chatter</label>
    <type>Checkbox</type>
</CustomField>