force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Default_Reference_Accounts_Managed__c.field-meta.xml
<CustomField>
    <fullName>refedge__Default_Reference_Accounts_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>New reference program member accounts will be Managed by default.</description>
    <inlineHelpText>New reference program member accounts will be Managed by default.</inlineHelpText>
    <label>Default Accounts to Managed?</label>
    <type>Checkbox</type>
</CustomField>