force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Do_Not_Include_Account_Fields__c.field-meta.xml
<CustomField>
    <fullName>refedge__Do_Not_Include_Account_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>While searching in Ref Search page, do not include account fields in search query. Only include Account name field in search.</description>
    <label>Text Search Exclude Account Fields</label>
    <type>Checkbox</type>
</CustomField>