force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>refedge__Email_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is email enabled app-wide?</description>
    <inlineHelpText>Used to enable/disable email notifications. Not necessary if Chatter is enabled.</inlineHelpText>
    <label>Email Enabled</label>
    <type>Checkbox</type>
</CustomField>