force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Email_Phone_Required__c.field-meta.xml
<CustomField>
    <fullName>refedge__Email_Phone_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email/Phone Not Required</label>
    <type>Checkbox</type>
</CustomField>