force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Enable_Data_Collector__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Data_Collector__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activates the Data Collector functionality.</inlineHelpText>
    <label>Enable Data Collector</label>
    <type>Checkbox</type>
</CustomField>