force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Enable_Group_Reference_Activity__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Group_Reference_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Group Reference Activity</label>
    <type>Checkbox</type>
</CustomField>