force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Enable_Ref_Search_Export__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Ref_Search_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables Export feature on Ref Search Page</description>
    <label>Enable Ref Search Export</label>
    <type>Checkbox</type>
</CustomField>