force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Enable_Slack_Integration__c.field-meta.xml
<CustomField>
    <fullName>refedge__Enable_Slack_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Slack Integration</label>
    <type>Checkbox</type>
</CustomField>