force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Escalation_to_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>refedge__Escalation_to_Owner_Manager__c</fullName>
    <description>The number of days before a Request deadline that an escalation notification will be sent to the Account/Reference Owner&apos;s manager.</description>
    <inlineHelpText>The number of days before a Request deadline that an escalation notification will be sent to the Account/Reference Owner&apos;s manager.</inlineHelpText>
    <label>Escalation to Owner’s Manager</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>