force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Event_Critical_Window__c.field-meta.xml
<CustomField>
    <fullName>refedge__Event_Critical_Window__c</fullName>
    <defaultValue>4</defaultValue>
    <label>Event Critical Window</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>