force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Expiration_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>refedge__Expiration_Timeframe__c</fullName>
    <label>Customer Expiration Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>end of current CY</fullName>
            </value>
            <value>
                <fullName>end of current FY</fullName>
            </value>
            <value>
                <fullName>end of NEXT CY</fullName>
            </value>
            <value>
                <fullName>end of NEXT FY</fullName>
            </value>
            <value>
                <fullName>&apos;x&apos; days from award date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>