force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Export_Object__c.field-meta.xml
<CustomField>
    <fullName>refedge__Export_Object__c</fullName>
    <description>Select the ReferenceEdge objects for which exports are enabled</description>
    <label>Export Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>