force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Export_Objects__c.field-meta.xml
<CustomField>
    <fullName>refedge__Export_Objects__c</fullName>
    <inlineHelpText>Select the ReferenceEdge objects for which exports are enabled</inlineHelpText>
    <label>Export Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attribute__c</fullName>
            </value>
            <value>
                <fullName>Reference_Content__c</fullName>
            </value>
            <value>
                <fullName>Reference_Content_Type__c</fullName>
            </value>
            <value>
                <fullName>Library__c</fullName>
            </value>
            <value>
                <fullName>Reference_Basic_Information__c</fullName>
            </value>
            <value>
                <fullName>Account_with_Attributes__c</fullName>
            </value>
            <value>
                <fullName>Contact_with_Attributes__c</fullName>
            </value>
            <value>
                <fullName>Content_with_Attributes__c</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>