force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Help_Overlay_Count__c.field-meta.xml
<CustomField>
    <fullName>refedge__Help_Overlay_Count__c</fullName>
    <label>Help Assistant Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>