force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Import_Objects__c.field-meta.xml
<CustomField>
    <fullName>refedge__Import_Objects__c</fullName>
    <inlineHelpText>Select the ReferenceEdge objects for which imports are enabled</inlineHelpText>
    <label>Import Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reference_Content__c</fullName>
            </value>
            <value>
                <fullName>Reference_Basic_Information__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>