force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Include_Weekends__c.field-meta.xml
<CustomField>
    <fullName>refedge__Include_Weekends__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, days specified in “Off Days of Week” will not be included in date calculations (e.g., request lead times).</inlineHelpText>
    <label>Exclude Weekends</label>
    <type>Checkbox</type>
</CustomField>