force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Influitive_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>refedge__Influitive_Auth_Token__c</fullName>
    <label>Influitive Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>