force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Inherit_Attributes_from_Primary_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inherit_Attributes_from_Primary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Contacts will ONLY inherit attributes from the Primary Account. By default, the primary account will have the oldest created date.</inlineHelpText>
    <label>Inherit Attributes from Primary Account</label>
    <type>Checkbox</type>
</CustomField>