force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Initial_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Initial_Notification_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the Opportunity Owner when Reference Lead Finder is enabled and their Opportunity meets the Reference Lead criteria.</inlineHelpText>
    <label>RLF Initial Notification Email</label>
    <type>Checkbox</type>
</CustomField>