force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Is_Influitive_Integration_Enabled__c.field-meta.xml
<CustomField>
    <fullName>refedge__Is_Influitive_Integration_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Influitive Integration Enabled</label>
    <type>Checkbox</type>
</CustomField>