force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Large_Opportunity_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Large_Opportunity_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</inlineHelpText>
    <label>Large Oppty Reference Request Email</label>
    <type>Checkbox</type>
</CustomField>