force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Large_Opportunity_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Large_Opportunity_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</description>
    <inlineHelpText>Enables the slack message sent to the public group configured for the CRP Team for any requests where the Opportunity amount meets or exceeds the Managed Request Opportunity Threshold.</inlineHelpText>
    <label>Large Oppty Reference Request Slack</label>
    <type>Checkbox</type>
</CustomField>