force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Last_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__Last_Refresh_Date__c</fullName>
    <description>Indicates when the last round of Profile Update requests were sent out.</description>
    <inlineHelpText>Indicates when the last round of Profile Update requests were sent out.</inlineHelpText>
    <label>Last Update Date</label>
    <type>Date</type>
</CustomField>