force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Launch_Frequency__c.field-meta.xml
<CustomField>
    <fullName>refedge__Launch_Frequency__c</fullName>
    <description>Determines the frequency with which requests for Profile Updates are sent using the Automatic Launch.</description>
    <inlineHelpText>Determines the frequency with which requests for Profile Updates are sent using the Automatic Launch.</inlineHelpText>
    <label>Launch Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>