force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Manage_ContentVersion_Custom_Fields_f__c.field-meta.xml
<CustomField>
    <fullName>refedge__Manage_ContentVersion_Custom_Fields_f__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;ManageContentVersionFields?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manage Content Version Custom Fields</label>
    <type>Text</type>
</CustomField>