force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Manage_Interview_Questions__c.field-meta.xml
<CustomField>
    <fullName>refedge__Manage_Interview_Questions__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;QuestionSettingMatrix?customSettingId=&apos;+Id, &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <label>Manage Interview Questions</label>
    <type>Text</type>
</CustomField>