force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Manage_Reference_Lead__c.field-meta.xml
<CustomField>
    <fullName>refedge__Manage_Reference_Lead__c</fullName>
    <formula>HYPERLINK(&apos;/apex/&apos;+ $Setup.refedge__POR_App_Configuration__c.refedge__Namespace__c +&apos;referenceLeadMappingPage?customSettingId=&apos;+ Id , &apos;Manage&apos;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Configure Reference Profile Form</label>
    <type>Text</type>
</CustomField>