force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Managed_to_P2P_Min__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_to_P2P_Min__c</fullName>
    <label>Managed to P2P Min</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>