force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Managed_to_P2P_Owner_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_to_P2P_Owner_Chatter__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the Reference Owner when a Request for their Account is switched from a Managed Request to a P2P Request.</inlineHelpText>
    <label>Managed2P2P Change-Owner Chatter</label>
    <type>Checkbox</type>
</CustomField>