force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Managed_to_P2P_Requester_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_to_P2P_Requester_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enables the email sent to the Requester when their Request is switched from Managed to P2P.</inlineHelpText>
    <label>Managed2P2P Change-Requester Email</label>
    <type>Checkbox</type>
</CustomField>