force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Managed_to_P2P_Requester_Slack__c.field-meta.xml
<CustomField>
    <fullName>refedge__Managed_to_P2P_Requester_Slack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the slack message sent to the Requester when their Request is switched from Managed to P2P.</description>
    <inlineHelpText>Enables the slack message sent to the Requester when their Request is switched from Managed to P2P.</inlineHelpText>
    <label>Managed2P2P Change-Requester Slack</label>
    <type>Checkbox</type>
</CustomField>