force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Manual_Automatic_Launch__c.field-meta.xml
<CustomField>
    <fullName>refedge__Manual_Automatic_Launch__c</fullName>
    <description>Manual Launch lets you decide the exact date to request the Profile Updates; with Automatic Launch Profile Updates are sent based on the Launch Frequency.</description>
    <inlineHelpText>Manual Launch lets you decide the exact date to request the Profile Updates; with Automatic Launch Profile Updates are sent based on the Launch Frequency.</inlineHelpText>
    <label>Manual/Automatic Launch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>