force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Microsite_Visit_Chatter__c.field-meta.xml
<CustomField>
    <fullName>refedge__Microsite_Visit_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the Chatter notification sent to the sender with the daily summary of clicks by recipient(s).</inlineHelpText>
    <label>Microsite Visit Chatter</label>
    <type>Checkbox</type>
</CustomField>