force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Microsite_Visit_Email__c.field-meta.xml
<CustomField>
    <fullName>refedge__Microsite_Visit_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enables the email sent to the sender with the daily summary of clicks by recipient(s).</inlineHelpText>
    <label>Microsite Visit Email</label>
    <type>Checkbox</type>
</CustomField>