force-app/main/default/objects/refedge__Custom_Settings__c/fields/refedge__Minimum_Opportunity_Size_DC__c.field-meta.xml
<CustomField>
    <fullName>refedge__Minimum_Opportunity_Size_DC__c</fullName>
    <inlineHelpText>The minimum Opportunity amount required to trigger a Data Collector notification.</inlineHelpText>
    <label>Minimum Opportunity Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>